# oh-my-kanban

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/: omk-comments.md  omk-context-injection.md  omk-context-sync.md  omk-create-task.md  omk-decision.md  omk-disable-this-session.md  omk-doctor.md  omk-done.md  omk-focus.md  omk-handoff.md  omk-help.md  omk-history.md  omk-link-branch.md  omk-link-commit.md  omk-link-work-item.md  omk-me.md  omk-new-session.md  omk-note.md  omk-off-this-session-with-delete-task.md  omk-off-this-session.md  omk-open.md  omk-scope-expand.md  omk-session-status.md  omk-session-summary.md  omk-setup.md  omk-snapshot.md  omk-sprint.md  omk-stats.md  omk-status.md  omk-subtask.md  omk-switch-task.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
.omc/: docs-outline.md
docs/: README_en.md  README_kr.md  WI-WORKFLOW-ARCHITECTURE.md  incident-report-hook-bootstrap-lock.md  index.md  package.json
docs/.vitepress/: config.mts
docs/en/: index.md  preset.md  recording-mode.md  snapshot.md  task-switching.md
docs/guide/: installation.md
docs/ko/: index.md  preset.md  recording-mode.md  snapshot.md  task-switching.md
installer/: README.md  package-lock.json  package.json  tsconfig.json
installer/src/: config-writer.ts  i18n.ts  index.ts  provider-metadata.ts  python.ts  restart.ts
shared/: provider-metadata.json
skills/omk-analyze-lv1/: SKILL.md
skills/omk-analyze-lv2/: SKILL.md
skills/omk-analyze-lv3/: SKILL.md
skills/omk-comments/: SKILL.md
skills/omk-context-injection/: SKILL.md
skills/omk-context-sync/: SKILL.md
skills/omk-create-task/: SKILL.md
skills/omk-decision/: SKILL.md
skills/omk-disable-this-session/: SKILL.md
skills/omk-doctor/: SKILL.md
skills/omk-done/: SKILL.md
skills/omk-focus/: SKILL.md
skills/omk-github-projects/: SKILL.md
skills/omk-handoff/: SKILL.md
skills/omk-help/: SKILL.md
skills/omk-history/: SKILL.md
skills/omk-hooks-doctor/: SKILL.md
tests/: conftest.py  helpers.py  test_aliases.py  test_chaos_defense.py  test_cli_structure.py  test_comment_polling.py  test_common_utils.py  test_config.py  test_config_cmd.py  test_config_linear_toml.py  test_format_preset.py  test_git_commit_tracking.py  test_github_projects_skill.py  test_github_wrapper.py  test_help_guidance.py  test_hooks_plugin.py  test_label_conventions.py  test_linear_commands_a.py  test_linear_commands_b.py  test_linear_core.py  test_linear_issue.py  test_marketplace_skill_docs.py  test_mcp_install.py  test_mcp_server.py  test_new_session_wi_guidance.py  test_orphan_detection.py  test_p1_skills.py  test_phase3_st26_subtask_completion.py  test_phase3_st27_wi_link.py  test_phase3_st28_blocked_cycle.py  test_phase4_st31_hotspot.py  test_plane_context_builder.py  test_plane_errors_e2e.py  test_plane_project_cycle_e2e.py  test_plane_remaining_e2e.py  test_plane_work_item_e2e.py  test_post_tool_hook.py  test_preset.py  test_project_scope.py  test_provider_registry.py  (+12 more)
(+158 files in other folders)
