[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-kanban"
version = "0.2.14"
description = "Multi-platform project management CLI for AI agents — Plane, Linear, and more"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "ej31", email = "ej31@users.noreply.github.com" },
]
keywords = [
    "cli",
    "kanban",
    "project-management",
    "plane",
    "linear",
    "ai-agent",
    "automation",
    "devtools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "plane-sdk>=0.2.6,<1.0",
    "click>=8.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/ej31/oh-my-kanban"
Repository = "https://github.com/ej31/oh-my-kanban"
Issues = "https://github.com/ej31/oh-my-kanban/issues"

[project.scripts]
omk = "oh_my_kanban.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["oh_my_kanban*"]

[tool.setuptools.package-data]
oh_my_kanban = [
    "plugin_data/**/*",
    "plugin_data/.claude-plugin/plugin.json",
    "plugin_data/.claude-plugin/marketplace.json",
    "plugin_data/skills/omk-setup/SKILL.md",
    "plugin_data/skills/omk-status/SKILL.md",
    "plugin_data/skills/omk-off/SKILL.md",
    "plugin_data/skills/omk-help/SKILL.md",    # glob으로 이미 포함됨 — 배포 번들 명시적 매니페스트
    "plugin_data/skills/omk-doctor/SKILL.md",  # glob으로 이미 포함됨 — 배포 번들 명시적 매니페스트
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
mcp = [
    "mcp>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]
